# ideation-cli

./: .gitignore  LICENSE  Makefile  README.md  crt.py  game_browser.py  pyproject.toml
ideation_cli/: __init__.py  cli.py  generator.py  prompts.py  strategies.py  utils.py
ideation_cli/config/: casual_mobile_games.json  classic_games.json  game_genres.json  game_types.json  oblique_strategies.json  rpg_games.json
prompts/: healthy_habits_app.md  love2d_gam_jam_2025.md  rpg_game_jam_2025.md
tests/: conftest.py
tests/cli/: test_cli.py
tests/generator/: test_generator.py
tests/utils/: test_create_game_id.py  test_init.py  test_load_json.py  test_parse_arguments.py  test_save_args_to_json.py  test_use_interactive_mode.py  test_validate_model.py
